# core

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  TESTING.md  Trunk.toml  codecov.yml
.git_hooks/: pre-commit
.github/actions/setup/: action.yml
.github/workflows/: meta.yml  tests.yml
core/backend/: Cargo.toml
core/backend/src/: lib.rs  main.rs
core/backend/src/routes/: mod.rs  test_route.rs
core/backend/tests/: test_route.rs
core/frontend/: Cargo.toml  build.rs  index.html
core/frontend/css/: index.scss
core/frontend/css/components/: canvas.scss  color_picker.scss  common.scss  notification_hub.scss  notifications.scss
core/frontend/src/: app.rs  lib.rs  main.rs
core/frontend/src/components/: app.rs  canvas.rs  color_picker.rs  common.rs  mod.rs  notification_hub.rs
core/frontend/src/components/hooks/: notifications.rs
core/frontend/src/components/notifications/: hub.rs  mod.rs  notification.rs
core/frontend/src/tests/: colors.rs  mod.rs  notifications.rs
core/frontend/src/utils/: color_memory.rs  colors.rs  error.rs  mod.rs  notification_store.rs  rgb_utils.rs  types.rs
core/frontend/src/utils/notifications/: component.rs  mod.rs  notification.rs  store.rs
docker/: dev.docker-compose.yml  dev.dockerfile
tests/: test.rs
