[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.21", features=["csr"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing-web = "0.1"
web-sys = { version = "0.3.78", features = ["DomRect", "Element", "HtmlCanvasElement", "HtmlSelectElement", "Storage"] }
yew_icons = { version = "0.8.0", features = ["font_awesome_solid"] }
log = "0.4.28"
wasm-bindgen = "0.2.101"
thiserror = "2.0.16"
serde_json = "1.0.143"
serde = "1.0.219"
gloo = "0.11.0"
palette = { version = "0.7.6", features = ["serde", "serializing"] }
instant = { version = "0.1.13", features = ["now", "wasm-bindgen"] }
bon = "3.7.2"
itertools = "0.14.0"
uuid = { version = "1.18.1", features = ["js", "v4"] }
num-traits = "0.2.19"

[features]
default = []
coverage = []

[build-dependencies]
chrono = "0.4.42"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
